--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,30 @@
     box-sizing: border-box;
 }
 
+header, main{
+    display: flex;
+    justify-content: center;
+}
+
 img{
-    width: 50%;
+    width: 30%;
+    margin-top: 20px;
+}
+
+i{
+    font-size: 50px;
+}
+
+.ticket{
+    background-color: red;
+    border: 1px solid black;
+    text-align: center;
+    margin-top: 100px;
+    padding: 25px;
+    border-radius: 20px;
+}
+
+p{
+    color: white;
+    font-size: 25px;
 }
